add py integration tests