@@ -1,15 +1,11 @@
 package ru.yandex.cloud.ml.platform.lzy.test.scenarios;
 
-import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import ru.yandex.cloud.ml.platform.lzy.servant.ServantStatus;
 import ru.yandex.cloud.ml.platform.lzy.test.LzyServantTestContext;
 import ru.yandex.cloud.ml.platform.lzy.test.LzyServantTestContext.Servant.ExecutionResult;
-import ru.yandex.cloud.ml.platform.lzy.test.LzyServerTestContext;
-import ru.yandex.cloud.ml.platform.lzy.test.impl.LzyServantDockerContext;
-import ru.yandex.cloud.ml.platform.lzy.test.impl.LzyServerProcessesContext;
 import ru.yandex.cloud.ml.platform.lzy.test.impl.Utils;
 
 import java.util.Collections;
@@ -19,50 +15,38 @@ import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.TimeUnit;
 
 @SuppressWarnings("CommentedOutCode")
-public class RunTest {
-    private static final int DEFAULT_SERVANT_INIT_TIMEOUT_SEC = 30;
-    private static final String LZY_MOUNT = "/tmp/lzy";
-
-    private LzyServerTestContext server;
-    private LzyServantTestContext servantContext;
-    private LzyServantTestContext.Servant servant;
+public class RunTest extends LzyBaseTest {
+    private LzyServantTestContext.Servant terminal;
 
     @Before
     public void setUp() {
-        server = new LzyServerProcessesContext();
-        servantContext = new LzyServantDockerContext();
-        servant = servantContext.startTerminalAtPathAndPort(
-            LZY_MOUNT,
-            9999,
-            server.host(servantContext.inDocker()),
-            server.port()
+        super.setUp();
+        terminal = servantContext.startTerminalAtPathAndPort(
+                LZY_MOUNT,
+                9999,
+                serverContext.host(servantContext.inDocker()),
+                serverContext.port()
         );
-        servant.waitForStatus(
-            ServantStatus.EXECUTING,
-            DEFAULT_SERVANT_INIT_TIMEOUT_SEC,
-            TimeUnit.SECONDS
+        terminal.waitForStatus(
+                ServantStatus.EXECUTING,
+                DEFAULT_SERVANT_INIT_TIMEOUT_SEC,
+                TimeUnit.SECONDS
         );
-    }
-
-    @After
-    public void tearDown() {
-        servantContext.close();
-        server.close();
     }
 
     @Test
     public void testEcho42() {
         //Arrange
         final FileIOOperation echo42 = new FileIOOperation(
-            "echo42",
-            Collections.emptyList(),
-            Collections.emptyList(),
-            "echo 42"
+                "echo42",
+                Collections.emptyList(),
+                Collections.emptyList(),
+                "echo 42"
         );
 
         //Act
-        servant.publish(echo42.getName(), echo42);
-        final ExecutionResult result = servant.run(echo42.getName(), "", Map.of());
+        terminal.publish(echo42.getName(), echo42);
+        final ExecutionResult result = terminal.run(echo42.getName(), "", Map.of());
 
         //Assert
         Assert.assertEquals("42\n", result.stdout());
@@ -76,22 +60,22 @@ public class RunTest {
         final String localFileName = "/tmp/lzy/lol/some_file.txt";
         final String channelName = "channel1";
         final FileIOOperation cat = new FileIOOperation(
-            "cat_lzy",
-            List.of(fileName.substring(LZY_MOUNT.length())),
-            Collections.emptyList(),
-            "cat " + fileName
+                "cat_lzy",
+                List.of(fileName.substring(LZY_MOUNT.length())),
+                Collections.emptyList(),
+                "cat " + fileName
         );
 
         //Act
-        servant.createChannel(channelName);
-        servant.createSlot(localFileName, channelName, Utils.outFileSot());
+        terminal.createChannel(channelName);
+        terminal.createSlot(localFileName, channelName, Utils.outFileSot());
         ForkJoinPool.commonPool()
-            .execute(() -> servant.execute("bash", "-c", "echo " + fileContent + " > " + localFileName));
-        servant.publish(cat.getName(), cat);
-        final ExecutionResult result = servant.run(
-            cat.getName(),
-            "",
-            Map.of(fileName.substring(LZY_MOUNT.length()), channelName)
+                .execute(() -> terminal.execute("bash", "-c", "echo " + fileContent + " > " + localFileName));
+        terminal.publish(cat.getName(), cat);
+        final ExecutionResult result = terminal.run(
+                cat.getName(),
+                "",
+                Map.of(fileName.substring(LZY_MOUNT.length()), channelName)
         );
 
         //Assert
@@ -106,26 +90,26 @@ public class RunTest {
         final String channelOutName = "channel2";
 
         final FileIOOperation echo_lzy = new FileIOOperation(
-            "echo_lzy",
-            Collections.emptyList(),
-            List.of(fileOutName.substring(LZY_MOUNT.length())),
-            "echo mama > " + fileOutName
+                "echo_lzy",
+                Collections.emptyList(),
+                List.of(fileOutName.substring(LZY_MOUNT.length())),
+                "echo mama > " + fileOutName
         );
 
         //Act
-        servant.createChannel(channelOutName);
-        servant.createSlot(localFileOutName, channelOutName, Utils.inFileSot());
+        terminal.createChannel(channelOutName);
+        terminal.createSlot(localFileOutName, channelOutName, Utils.inFileSot());
 
-        servant.publish(echo_lzy.getName(), echo_lzy);
+        terminal.publish(echo_lzy.getName(), echo_lzy);
         final ExecutionResult[] result1 = new ExecutionResult[1];
         ForkJoinPool.commonPool()
-            .execute(() -> result1[0] = servant.execute("bash", "-c", "cat " + localFileOutName));
-        final ExecutionResult result = servant.run(
-            echo_lzy.getName(),
-            "",
-            Map.of(
-                fileOutName.substring(LZY_MOUNT.length()), channelOutName
-            )
+                .execute(() -> result1[0] = terminal.execute("bash", "-c", "cat " + localFileOutName));
+        final ExecutionResult result = terminal.run(
+                echo_lzy.getName(),
+                "",
+                Map.of(
+                        fileOutName.substring(LZY_MOUNT.length()), channelOutName
+                )
         );
 
         //Assert
@@ -147,31 +131,31 @@ public class RunTest {
         final String channelOutName = "channel2";
 
         final FileIOOperation cat_to_file = new FileIOOperation(
-            "cat_to_file_lzy",
-            List.of(fileName.substring(LZY_MOUNT.length())),
-            List.of(fileOutName.substring(LZY_MOUNT.length())),
-            "cat " + fileName + " > " + fileOutName
+                "cat_to_file_lzy",
+                List.of(fileName.substring(LZY_MOUNT.length())),
+                List.of(fileOutName.substring(LZY_MOUNT.length())),
+                "cat " + fileName + " > " + fileOutName
         );
 
         //Act
-        servant.createChannel(channelName);
-        servant.createSlot(localFileName, channelName, Utils.outFileSot());
-        servant.createChannel(channelOutName);
-        servant.createSlot(localFileOutName, channelOutName, Utils.inFileSot());
+        terminal.createChannel(channelName);
+        terminal.createSlot(localFileName, channelName, Utils.outFileSot());
+        terminal.createChannel(channelOutName);
+        terminal.createSlot(localFileOutName, channelOutName, Utils.inFileSot());
 
         ForkJoinPool.commonPool()
-            .execute(() -> servant.execute("bash", "-c", "echo " + fileContent + " > " + localFileName));
-        servant.publish(cat_to_file.getName(), cat_to_file);
+                .execute(() -> terminal.execute("bash", "-c", "echo " + fileContent + " > " + localFileName));
+        terminal.publish(cat_to_file.getName(), cat_to_file);
         final ExecutionResult[] result1 = new ExecutionResult[1];
         ForkJoinPool.commonPool()
-            .execute(() -> result1[0] = servant.execute("bash", "-c", "cat " + localFileOutName));
-        final ExecutionResult result = servant.run(
-            cat_to_file.getName(),
-            "",
-            Map.of(
-                fileName.substring(LZY_MOUNT.length()), channelName,
-                fileOutName.substring(LZY_MOUNT.length()), channelOutName
-            )
+                .execute(() -> result1[0] = terminal.execute("bash", "-c", "cat " + localFileOutName));
+        final ExecutionResult result = terminal.run(
+                cat_to_file.getName(),
+                "",
+                Map.of(
+                        fileName.substring(LZY_MOUNT.length()), channelName,
+                        fileOutName.substring(LZY_MOUNT.length()), channelOutName
+                )
         );
 
         //Assert
